--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,19 @@
       <div id="empty-box"></div>
       <!-- spacing box-->
       <h1>Kristiansund</h1>
-      <nav><a href="./index.html"></a><a href=""></a><a href=""></a></nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="./index.html">Home</a>
+          </li>
+          <li>
+            <a href="./gallery.html" class="current-page">Gallery</a>
+          </li>
+          <li>
+            <a href="./about.html">About</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <section>
       <div id="landing-img"></div>
