added information to the site

--- a/index.html
+++ b/index.html
@@ -29,24 +29,106 @@
       </div>
       <article id="about">
         <p class="article-header">About Kristiansund</p>
+        <p class="info">(information taken from Wikipedia.org)</p>
         <p class="article-text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto
-          maiores doloribus iure ipsam aspernatur accusantium excepturi aut
-          debitis consectetur sequi.
+          <strong>Kristiansund</strong> (historically spelled
+          <em>Christianssund</em> and earlier named <em>Fosna</em>) is a
+          municipality on the western coast of Norway in the Nordmøre district
+          of Møre og Romsdal county. The administrative center of the
+          municipality is the town of Kristiansund (established in 1742), which
+          is the major town for the whole Nordmøre region. Other notable
+          settlements in the municipality include the villages of Kvalvåg,
+          Rensvik, and Nedre Frei.
         </p>
         <p class="article-text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium,
-          non praesentium! Debitis amet ad beatae in veritatis deserunt
-          perferendis error.
+          The 87-square-kilometre (34 sq mi) municipality is the 334th largest
+          by area out of the 357 municipalities in Norway. Kristiansund
+          Municipality is the 53rd most populous municipality in Norway with a
+          population of 24,404. The municipality's population density is 279.1
+          inhabitants per square kilometre (723/sq mi) and its population has
+          increased by 0.04% over the previous 10-year period.
         </p>
         <p class="article-text">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum adipisci
-          vel ipsam voluptas incidunt optio blanditiis, iusto ea veniam nostrum?
+          The municipality is named after the town of Kristiansund.
+          Historically, it was spelled Christianssund. The first element of the
+          name comes from the Danish-Norwegian King Christian VI who founded the
+          town in 1742. The last element of the name is sund which means
+          "strait" or "sound". The old name of the town/village (originally the
+          island Kirkelandet) was Fosna or Fosen (Old Norse: fólgsn) which means
+          "hiding place" (here 'hidden port'). It was also often named Lille
+          Fosen ("the small Fosen") to distinguish it from the island Storfosna
+          ("the big Fosen") in Ørland.
+        </p>
+        <p class="article-text">
+          Before 1877, the name was spelled <em>Christianssund</em>, from 1877
+          to 1888 it was spelled <em>Kristianssund</em>, and since 1889 it has
+          had its present spelling, <em>Kristiansund</em>.
+        </p>
+        <p class="article-text">
+          Before the introduction of postal codes in Norway in 1968, it was easy
+          to confuse the name Kristiansund with Kristiansand in the south. It
+          was therefore obligatory to always add an N (for north) to
+          Kristiansund (Kristiansund N) and an S (for south) to Kristiansand
+          (Kristiansand S). This is pretty much still practiced and also occurs
+          in some other contexts than postal addresses.
+        </p>
+        <p class="article-text">
+          The coat of arms was granted on 27 June 1742. The arms were granted by
+          King Christian VI and are described as a silver or white river flowing
+          from a cliff, with salmon swimming upwards on a blue background. The
+          waterfall is most likely based on a misinterpretaion of the old name
+          for the town Fosen, as it resembles the Norwegian word for
+          "waterfall". A replica of the waterfall shown in the arms was
+          eventually constructed in 1992 for the towns 250th anniversary.
+        </p>
+        <p class="article-text">
+          The municipality borders Smøla Municipality and Aure Municipality to
+          the northeast, Tingvoll Municipality to the east, Gjemnes Municipality
+          to the south, and Averøy Municipality to the southwest. The small Grip
+          archipelago is located in the northwestern part of the municipality.
+          The municipality is surrounded by the Freifjorden and Kvernesfjorden
+          with the open sea to the northwest.
+        </p>
+        <p class="article-text">
+          The town of Kristiansund is built on four main islands, with many
+          smaller islands. The island of Nordlandet ("North Land", humorously
+          nicknamed Marokko), is the second largest island and the site of the
+          local airport, Kristiansund Airport, Kvernberget (IATA code: KSU).
+          Kirklandet, third in size is made up of two areas Kirkelandet and
+          Gomalandet. In the local dialect, Kirkelandet (the "Church Land") is
+          pronounced "Kirklandet", without the middle e. The smallest island is
+          Innlandet ("Innermost Land"; humorously, "Tahiti"). The largest island
+          in the municipality is Frei which was part of the old Frei
+          Municipality which was merged into Kristiansund on 1 January 2008. The
+          highest point of the municipality is located on Frei island,
+          Freikollen at a height of 629 metres (2,064 ft).
+        </p>
+        <p class="article-text">
+          The islands of Grip, located northwest of Kristiansund are also a part
+          of the municipality. Grip Municipality was Norway's smallest
+          municipality, and also one of the most remote until it merged with
+          Kristiansund in 1964. Today the island of Grip holds status as a
+          deserted fishing village, but in the summer season it is a popular
+          tourist attraction due to the very special location and architecture.
+          Grip Stave Church, the second smallest stave church of Norway
+          (Undredal Stave Church is smaller), is also located at Grip. It is
+          also where Grip Lighthouse is located.
+        </p>
+        <p class="article-text">
+          Kristiansund includes the town of Kristiansund which is one of the
+          most densely populated cities of Norway, having what is arguably the
+          country's most urban small city centre, due to the relatively small
+          size of the islands on which it is built and the very constricted
+          central harbor/town area of Kirkelandet.
         </p>
       </article>
     </section>
     <footer>
-      <p class="footer-copyright"></p>
+      <p class="footer-info">
+        All information taken from Wikipedia. Picture borrowed from Visit
+        Norway.
+      </p>
+      <a href="#landing-img">Back to top</a>
     </footer>
   </body>
 </html>
