prep for scripting

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS animations, Transitions & Transform</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="scroll-anim.js" defer></script>
   </head>
   <body>
     <header>
@@ -30,7 +31,7 @@
       <article id="about">
         <p class="article-header">About Kristiansund</p>
         <p class="info">(information taken from Wikipedia.org)</p>
-        <p class="article-text">
+        <p class="article-text hidden">
           <strong>Kristiansund</strong> (historically spelled
           <em>Christianssund</em> and earlier named <em>Fosna</em>) is a
           municipality on the western coast of Norway in the Nordmøre district
@@ -40,7 +41,7 @@
           settlements in the municipality include the villages of Kvalvåg,
           Rensvik, and Nedre Frei.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           The 87-square-kilometre (34 sq mi) municipality is the 334th largest
           by area out of the 357 municipalities in Norway. Kristiansund
           Municipality is the 53rd most populous municipality in Norway with a
@@ -48,7 +49,7 @@
           inhabitants per square kilometre (723/sq mi) and its population has
           increased by 0.04% over the previous 10-year period.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           The municipality is named after the town of Kristiansund.
           Historically, it was spelled Christianssund. The first element of the
           name comes from the Danish-Norwegian King Christian VI who founded the
@@ -59,12 +60,12 @@
           Fosen ("the small Fosen") to distinguish it from the island Storfosna
           ("the big Fosen") in Ørland.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           Before 1877, the name was spelled <em>Christianssund</em>, from 1877
           to 1888 it was spelled <em>Kristianssund</em>, and since 1889 it has
           had its present spelling, <em>Kristiansund</em>.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           Before the introduction of postal codes in Norway in 1968, it was easy
           to confuse the name Kristiansund with Kristiansand in the south. It
           was therefore obligatory to always add an N (for north) to
@@ -72,7 +73,7 @@
           (Kristiansand S). This is pretty much still practiced and also occurs
           in some other contexts than postal addresses.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           The coat of arms was granted on 27 June 1742. The arms were granted by
           King Christian VI and are described as a silver or white river flowing
           from a cliff, with salmon swimming upwards on a blue background. The
@@ -81,7 +82,7 @@
           "waterfall". A replica of the waterfall shown in the arms was
           eventually constructed in 1992 for the towns 250th anniversary.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           The municipality borders Smøla Municipality and Aure Municipality to
           the northeast, Tingvoll Municipality to the east, Gjemnes Municipality
           to the south, and Averøy Municipality to the southwest. The small Grip
@@ -89,7 +90,7 @@
           The municipality is surrounded by the Freifjorden and Kvernesfjorden
           with the open sea to the northwest.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           The town of Kristiansund is built on four main islands, with many
           smaller islands. The island of Nordlandet ("North Land", humorously
           nicknamed Marokko), is the second largest island and the site of the
@@ -103,7 +104,7 @@
           highest point of the municipality is located on Frei island,
           Freikollen at a height of 629 metres (2,064 ft).
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           The islands of Grip, located northwest of Kristiansund are also a part
           of the municipality. Grip Municipality was Norway's smallest
           municipality, and also one of the most remote until it merged with
@@ -114,7 +115,7 @@
           (Undredal Stave Church is smaller), is also located at Grip. It is
           also where Grip Lighthouse is located.
         </p>
-        <p class="article-text">
+        <p class="article-text hidden">
           Kristiansund includes the town of Kristiansund which is one of the
           most densely populated cities of Norway, having what is arguably the
           country's most urban small city centre, due to the relatively small
