first try of making transition animation for text - fail

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <p class="welcome-text">Welcome to</p>
         <p class="krsund-text">Kristiansund</p>
       </div>
+    </section>
+    <section>
       <article id="about">
-        <p class="article-header">About Kristiansund</p>
-        <p class="info">(information taken from Wikipedia.org)</p>
+        <p class="article-header hidden">About Kristiansund</p>
+        <p class="info hidden">(information taken from Wikipedia.org)</p>
         <p class="article-text hidden">
           <strong>Kristiansund</strong> (historically spelled
           <em>Christianssund</em> and earlier named <em>Fosna</em>) is a
