--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <footer>
       <p class="footer-info">
         All information taken from Wikipedia. Picture borrowed from Visit
-        Norway.
+        Norway. Made by Ole for an assignment during KodeHode
       </p>
       <a href="#landing-img">Back to top</a>
     </footer>
